Criada a funcionalidade de criar usuário

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,8 @@
 #NotBlank.usuarioDTO.nome=O nome do usuário é obrigatório
 
 NotBlank={0} é obrigatório
+
+usuario.cadastro.cpf.existente=Não é possível cadastrar o usuário, pois já existe outro usuário cadastro com o mesmo número de CPF
+usuario.cadastro.cpf.invalido=CPF inválido
+usuario.cadastro.nome.existente=Não é possível cadastrar o usuário, pois já existe outra usuário cadastrado com o mesmo nome
+usuario.cadastro.email.existente=Não é possível cadastrar o usuário, pois já existe outra usuário cadastrado com o mesmo e-mail
