--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,3 +6,6 @@ usuario.cadastro.cpf.existente=Não é possível cadastrar o usuário, pois já 
 usuario.cadastro.cpf.invalido=CPF inválido
 usuario.cadastro.nome.existente=Não é possível cadastrar o usuário, pois já existe outra usuário cadastrado com o mesmo nome
 usuario.cadastro.email.existente=Não é possível cadastrar o usuário, pois já existe outra usuário cadastrado com o mesmo e-mail
+
+
+company.already.exists=There is already a company registered with that name or federalTaxPayerId
